# pytorch_cheatsheet

./: README.md
autograd/: autograd.ipynb  autograd_simulate.py
basic/craft_transformer/: modeling.py
basic/debug/: Dispatch.md  Tensor.md  operator_add.md  operator_add.py
basic/mnist_train_demo/: main.py
dispatcher/: CMakeLists.txt  build.sh  op.cpp  test.py
fx/: conv_bn_fuser.py  overview.py
jit/fx/: overview.py
jit/jit_script/: jit_script.py
jit/torch_compile/: compile_fx.py  get_started.py  log  test.py
quantization/: basic_sim.py  qat_fx.py
transformer/: __init__.py  basic_transformer.py  train.py
